--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -2,5 +2,7 @@
     --color-background-page: #6497b1;
     --color-background-page-alt: #b3cde0;
 
-    --color-text-main: #963b00;
+    --color-text-main: #0a0f11;
+
+    --font-main: 'Nunito Sans', sans-serif;
 }
