--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -6,6 +6,23 @@ body {
     padding: 20px;
 }
 
+header {
+    background-color: #011f4b;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+header .logo {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: white;
+    margin: 0;
+}
+
 h1 {
     font-family: var(--font-main);
     font-size: xx-large;
@@ -39,9 +56,14 @@ ul {
     margin-bottom: 20px;
 }
 
-.item {
+.wishlist-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Creates 3 equal columns */
+    gap: 20px; /* Adds space between items */
+}
+
+.wishlist {
     background: var(--color-background-page-alt);
-    margin: 10px 0;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -49,12 +71,12 @@ ul {
     align-items: center;
 }
 
-.item h2 {
+.wishlist h2 {
     margin: 0;
     flex-grow: 1;
 }
 
-.item p {
+.wishlist p {
     margin: 0;
 }
 
@@ -63,7 +85,6 @@ ul {
     align-items: center;
     margin-bottom: 20px;
 }
-
 
 .icon {
     width: 120px;
@@ -75,5 +96,5 @@ svg.icon {
     width: 50px;
     height: 50px;
     vertical-align: top;
-    fill: black;
+    fill: gray;
 }
