Rework of look + clean up css and hmtl

--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -1,6 +1,7 @@
 :root {
     --color-background-page: #6497b1;
     --color-background-page-alt: #b3cde0;
+    --color-header: #011f4b;
 
     --color-text-main: #0a0f11;
 
