--- a/packages/proto/public/styles/budget.css
+++ b/packages/proto/public/styles/budget.css
@@ -1,8 +1,27 @@
-.budget-container, .wishlist-text {
+.budget-container {
     display: flex;
+    background-color: var(--color-background-page-alt);
+    border-radius: 25px;
+    max-width: 250px;
+    max-height: 125px;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 20px auto;
+    margin: 40px auto auto;
+    padding: 10px;
+}
+
+.budget-container h1 {
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 50px;
+    color: var(--color-text-main);
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.budget-container p {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 40px;
+    color: var(--color-text-main);
+    margin-top: 0;
     text-align: center;
 }
