--- a/packages/proto/public/styles/reset.css
+++ b/packages/proto/public/styles/reset.css
@@ -1,10 +1,12 @@
-* {
+/* * {
     margin: 0;
     box-sizing: border-box;
 }
 body {
     line-height: 1;
+    margin: 0;
+    padding: 0;
 }
 img {
     max-width: 100%;
-}
+} */
