--- a/packages/proto/public/styles/start_page.css
+++ b/packages/proto/public/styles/start_page.css
@@ -1,4 +1,4 @@
-.information-container {
+.start-button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,23 +10,14 @@
     border-radius: 25px;
 }
 
-.information-title {
+.start-text {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 40px;
     margin: 10px 0;
     text-decoration: none;
 }
 
-.information-image {
-    width: calc(100% - 40px);
-    height: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-    margin: 0 20px;
-}
-
-.detail {
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 30px;
-    margin: 5px 0;
+.start-button-container:hover {
+    box-shadow: 0 0 20px var(--color-header);
+    transform: scale(1.05);
 }
