--- a/packages/proto/public/styles/homepage.css
+++ b/packages/proto/public/styles/homepage.css
@@ -5,42 +5,8 @@
     margin: 20px auto;
 }
 
-.wishlist-link {
+.wishlist-container a {
     text-decoration: none;
     color: var(--color-text-main);
     margin: 10px;
-}
-
-.wishlist {
-    background-color: var(--color-background-page-alt);
-    border-radius: 25px;
-    height: 500px;
-    width: 500px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    padding: 20px;
-    margin: 10px;
-}
-
-.wishlist-title {
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 40px;
-    margin: 10px 0;
-    text-decoration: none;
-}
-
-.wishlist-image {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    border-radius: 25px;
-}
-
-.wishlist:hover {
-    box-shadow: 0 0 20px var(--color-header);
-    transform: scale(1.05);
-}
-
-.wishlist:hover img {
-    transform: scale(1.05);
-}
+  }
